# rust-advance-demo

./: Cargo.toml  shakespeare.txt
ai_agent/: Cargo.toml
ai_agent/src/: constant.rs  main.rs
ai_agent/src/llm/: complete.rs
src/: async_rust.rs  lib.rs  thread_builder.rs
src/async_rust/: async_demo1.rs  async_demo2.rs  async_demo3.rs  async_demo4.rs  async_demo5.rs  async_demo6.rs  async_demo7.rs  async_demo8.rs  async_demo9.rs  tokio_demo.rs  tokio_demo1.rs  tokio_demo2.rs
src/thread_builder/: atomics.rs  cond_var.rs  lazy.rs  mod.rs  mpsc_demo.rs  once_cell.rs  rayon_demo.rs  shared_data.rs  thread_demo.rs  thread_mutex.rs  thread_park.rs
