[package]
name = "ai_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-openai = {version="0.41.1", features=["chat-completion"]}
futures = "0.3.31"
rayon = "1.11.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
dotenvy = "0.15.7"
